Security fixes: JWT auth, admin login, file upload security

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,7 @@
-
-RAZORPAY_KEY_ID=rzp_test_KbKCf8dIP10uNs
-
-RAZORPAY_KEY_SECRET=EhrvrXGnZahZUvh3Ib5JGAd7
-
-
-
 PORT=4000
-MONGODB_URI="mongodb+srv://khushivrma07:mongo123@cluster0.jy4w4ik.mongodb.net/food-del"
-
-JWT_SECRET="random#secret"
+MONGODB_URI=mongodb+srv://khushivrma07:mongo123@cluster0.jy4w4ik.mongodb.net/food-del
+JWT_SECRET=your_super_secure_jwt_secret_key_here_change_this_in_production
+RAZORPAY_KEY_ID=rzp_test_KbKCf8dIP10uNs
+RAZORPAY_KEY_SECRET=EhrvrXGnZahZUvh3Ib5JGAd7
+ADMIN_EMAIL=admin@foodzone.com
+ADMIN_PASSWORD=SecureAdminPassword123!
